objects/ssot__GiftCommitmentSchedule__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdvancementType__c</fullName>
        <label>Advancement Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommitmentUpdateReason__c</fullName>
        <label>Commitment Update Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__GenerationalCohort__c</fullName>
        <label>Generational Cohort</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftCommitmentId__c</fullName>
        <label>Gift Commitment</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftCommitmentSchdBefEditID__c</fullName>
        <label>Gift Commitment Schd Bef Edit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftCommittmentScheduleType__c</fullName>
        <label>Gift Committment Schedule Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GraduationAchievement__c</fullName>
        <label>Graduation Achievement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GraduationCohort__c</fullName>
        <label>Graduation Cohort</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Gift Committment Schedule Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodId__c</fullName>
        <label>Payment Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TransactionAmount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TransactionDay__c</fullName>
        <label>Transaction Day</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TransactionInterval__c</fullName>
        <label>Transaction Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TransactionPeriod__c</fullName>
        <label>Transaction Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761238234_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftCommitmentSchedule_CampaignId_ma_rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>GiftCommitmentSchedule_CampaignId_ma_rel</relationshipLabel>
        <relationshipName>rel_1697761238234_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761238306_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftCommitmentSchedule_GiftCommitmen_rel</label>
        <referenceTo>ssot__GiftCommitment__dlm</referenceTo>
        <relationshipLabel>GiftCommitmentSchedule_GiftCommitmen_rel</relationshipLabel>
        <relationshipName>rel_1697761238306_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761238374_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftCommitmentSchedule_GiftCommitmen_rel</label>
        <referenceTo>ssot__GiftCommitmentSchedule__dlm</referenceTo>
        <relationshipLabel>GiftCommitmentSchedule_GiftCommitmen_rel</relationshipLabel>
        <relationshipName>rel_1697761238374_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>